--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 alembic==1.1.0
 apipkg==1.5
-apparmor==2.13.3
 appdirs==1.4.3
 asn1crypto==0.24.0
 astroid==2.3.1
@@ -14,7 +13,6 @@ bcrypt==3.1.7
 Beaker==1.11.0
 bleach==3.1.0
 blinker==1.4
-btrfsutil==1.1.1
 CacheControl==0.12.5
 certifi==2019.6.16
 cffi==1.12.3
@@ -22,8 +20,7 @@ chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 constantly==15.1.0
-cryptography==2.7
-cupshelpers==1.0
+cryptography==2.8
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
@@ -50,9 +47,8 @@ Flask-Principal==0.4.0
 Flask-Script==2.0.6
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.0
-Flask-WTF==0.14.2.dev20180729
+Flask-WTF==0.14.2
 GeoIP==1.3.2
-gufw==19.10.0
 gunicorn==19.9.0
 html5lib==1.0.1
 htmlmin==0.1.12
@@ -75,15 +71,13 @@ jupyter-client==5.3.4
 jupyter-console==6.0.0
 jupyter-core==4.6.0
 Kivy==1.11.1
+Kivy-Garden==0.1.4
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
-lensfun==0.3.2
-LibAppArmor==2.13.3
+linecache2==1.0.0
 lockfile==0.12.2
-louis==3.11.0
 Mako==1.0.14
 MarkupSafe==1.1.1
-matplotlib==3.1.1
 mccabe==0.6.1
 mistune==0.8.4
 more-itertools==4.3.0
@@ -95,9 +89,8 @@ nbformat==4.4.0
 newsapi-python==0.2.5
 notebook==6.0.1
 npyscreen==4.10.5
-numpy==1.17.2
+numpy==1.17.3
 packaging==19.2
-pacman-mirrors==4.15
 pandocfilters==1.4.2
 paramiko==2.6.0
 parso==0.5.1
@@ -110,6 +103,7 @@ Pillow==6.1.0
 pitch==0.0.6
 pluggy==0.13.0
 ply==3.11
+posts==0.2.2
 progress==1.5
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
@@ -126,10 +120,10 @@ pycups==1.9.74
 pycurl==7.43.0.3
 pyfiglet==0.8.post0
 Pygments==2.4.2
-PyGObject==3.34.0
 PyHamcrest==1.9.0
 pylint==2.4.2
 pylint-flask==0.6
+pylint-plugin-utils==0.6
 PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
@@ -143,7 +137,6 @@ pytest-runner==5.1
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
-python-libtorrent==1.1.13
 python-mimeparse==1.6.0
 pytoml==0.1.21
 pytz==2019.3
@@ -158,24 +151,23 @@ Send2Trash==1.5.0
 service-identity==18.1.0
 setproctitle==1.1.10
 simplegeneric==0.8.1
-simplejson==3.16.1
 six==1.12.0
 speaklater==1.3
 SQLAlchemy==1.3.9
 sqlparse==0.3.0
 sshtunnel==0.1.4
 svgwrite==1.3.1
-team==1.0
 terminado==0.8.2
 testpath==0.4.2
 testtools==2.3.0
 tornado==6.0.3
+traceback2==1.4.0
 traitlets==4.3.2
 Tree==0.2.4
 Twisted==19.7.0
 typed-ast==1.4.0
 typing-extensions==3.7.4
-ufw==0.36
+unittest2==1.1.0
 urllib3==1.24.3
 virtualenv==16.7.6
 visitor==0.1.3
